added basic retriever class

--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'enable_logging': True, 'max_search_results_per_query': 5, 'alternative_query_term_count': 5, 'max_workers': 3, 'embeddings': 'OpenAIEmbeddings', 'vector_store': 'FAISS'}\n",
+      "<ragdoll.config.Config object at 0x00000186FDE80090>\n",
       "Running in a Jupyter Notebook or JupyterLab environment.\n"
      ]
     }
@@ -54,6 +54,13 @@
     "\n",
     "print(index.get_config())\n",
     "check_notebook = is_notebook(print_output=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Indexing"
    ]
   },
   {
@@ -74,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,20 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['What is Langchain and how does it work?',\n",
-       " 'Langchain features and benefits',\n",
-       " 'Langchain use cases and applications',\n",
-       " 'Langchain competitors and alternatives',\n",
-       " 'Langchain reviews and user experiences']"
+       "['langchain features and benefits', 'langchain reviews and testimonials']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,12 +139,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "results=index.get_search_results(search_queries)\n",
     "#can also access this via index.search_results or get the urls only with index.url_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  * https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "  * https://lakefs.io/blog/what-is-langchain-ml-architecture/\n",
+      "  * https://logankilpatrick.medium.com/what-is-langchain-and-why-should-i-care-as-a-developer-b2d952c42b28\n",
+      "  * https://news.ycombinator.com/item?id=36645575\n",
+      "  * https://www.reddit.com/r/aipromptprogramming/comments/13f8gjr/review_langchain_vs_huggingfaces_new_agent_system/\n",
+      "  * https://github.com/hwchase17/langchain/issues/4772\n"
+     ]
+    }
+   ],
+   "source": [
+    "urllist = f\"\".join(f\"\\n  * {d['href']}\" for i, d in enumerate(results))\n",
+    "print(urllist)"
    ]
   },
   {
@@ -153,59 +180,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  * https://www.techtarget.com/searchenterpriseai/definition/LangChain\n",
-      "  * https://www.ibm.com/topics/langchain\n",
-      "  * https://www.producthunt.com/stories/what-is-langchain-how-to-use\n",
-      "  * https://aws.amazon.com/what-is/langchain/\n",
-      "  * https://blog.enterprisedna.co/what-is-langchain-a-beginners-guide-with-examples/\n",
-      "  * https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
-      "  * https://lakefs.io/blog/what-is-langchain-ml-architecture/\n",
-      "  * https://logankilpatrick.medium.com/what-is-langchain-and-why-should-i-care-as-a-developer-b2d952c42b28\n",
-      "  * https://js.langchain.com/docs/use_cases\n",
-      "  * https://medium.com/@ebruboyaci35/use-cases-with-langchain-e0fd5b0587f1\n",
-      "  * https://python.langchain.com/docs/use_cases\n",
-      "  * https://github.com/gkamradt/langchain-tutorials/blob/main/LangChain%20Cookbook%20Part%202%20-%20Use%20Cases.ipynb\n",
-      "  * https://www.datacamp.com/tutorial/introduction-to-lanchain-for-data-engineering-and-data-applications\n",
-      "  * https://www.reddit.com/r/LocalLLaMA/comments/141ttwt/alternative_to_langchain_for_open_llms/\n",
-      "  * https://blog.apify.com/langchain-alternatives/\n",
-      "  * https://news.ycombinator.com/item?id=36775475\n",
-      "  * https://medium.com/mlearning-ai/the-langchain-alternative-you-absolutely-need-to-master-d508cabfd64a\n",
-      "  * https://analyticsindiamag.com/top-9-langchain-alternatives-for-building-ai-agents/\n",
-      "  * https://news.ycombinator.com/item?id=36645575\n",
-      "  * https://medium.com/the-business-of-ai/dont-use-langchain-yet-f1cb73fc7a0b\n",
-      "  * https://github.com/hwchase17/langchain/issues/4772\n",
-      "  * https://www.linkedin.com/posts/ben-auffarth_langchain-llms-activity-7130094736203214848-QsOP?trk=public_profile_like_view\n",
-      "  * https://docs.smith.langchain.com/evaluation/capturing-feedback\n"
-     ]
-    }
-   ],
-   "source": [
-    "urllist = f\"\".join(f\"\\n  * {d['href']}\" for i, d in enumerate(results))\n",
-    "print(urllist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "error occurred: HTTPSConnectionPool(host='www.marktechpost.com', port=443): Read timed out. (read timeout=4) \n",
       "----------------------------------------------------------------------------------------------------\n",
-      "extracted 22 sites\n",
+      "extracted 6 sites\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "https://www.techtarget.com/searchenterpriseai/definition/LangChain \n",
+      "https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/ \n",
       "\n",
-      " The potential of AI technology has been percolating in the background for years. But when ChatGPT, the AI chatbot, began grabbing headlines in early 2023, it put generative AI in the spotlight.\n",
-      "This guide is your go-to manual for generative AI, covering its benefits, limits, use cases, prospects and much more.\n",
-      "You forgot to provide an Email Address.\n",
-      "This email address doesn’t appear to be valid.\n",
-      "This email address is already registered. Please log in.\n",
-      "You have exceeded the maximum character limi\n"
+      " What is LangChain? Use Cases and Benefits\n",
+      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
+      "1. Context-Awareness: LangChain enables applications to be context-aware by establishing connections between a language model and various context sources. These sources may include prompt instructions, few-shot examples, or other content t\n"
      ]
     }
    ],
@@ -239,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +229,7 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "extracted 352 documents from 22 documents\n",
+      "extracted 97 documents from 6 documents\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
@@ -263,24 +245,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Embed and Store\n",
-    "\n",
-    "Let’s start by initializing a simple vector store retriever and storing our docs (in chunks).\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "retriever = index.get_retriever(split_docs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Pipeline \n",
     "\n",
     "we can also run all in one like this:"
@@ -288,97 +252,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "extracted 97 documents from 6 documents\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "pl_retriever = index.run_index_pipeline(question)"
+    "split_docs = index.run_index_pipeline(question)\n",
+    "print(\"-\" * 100)\n",
+    "print(f\"extracted {len(split_docs)} documents from {len(documents)} documents\")\n",
+    "print(\"-\" * 100)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic retrieval"
+    "# Retrieval"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------------------------------------\n",
-      "The retriever had found 4 relevant documents\n",
-      "---------------------------------------------------------------------------------------------------- \n",
-      "\n",
-      "\n",
-      "Source: https://aws.amazon.com/what-is/langchain/\n",
-      "Title: What is LangChain? - LangChain Explained - AWS\n",
-      "Content: How does LangChain work?\n",
-      "With LangChain, developers can adapt a language model flexibly to specific business contexts by designating steps required to produce the desired outcome.\n",
-      "Chains\n",
-      "Chains are the fundamental principle that holds various AI components in LangChain to provide context-aware responses. A chain is a series of automated actions from the user's query to the model's output. For example, developers can use a chain for:\n",
-      "Links\n",
-      "Chains are made of links. Each action that developers string together to form a chained sequence is called a link. With links, developers can divide complex tasks into multiple, smaller tasks. Examples of links include:\n",
-      "In the LangChain framework, a link accepts input from the user and passes it to the LangChain libraries for processing. LangChain also allows link reordering to create different AI workflows.\n",
-      "Overview\n",
-      "To use LangChain, developers install the framework in Python with the following command:\n",
-      "pip install langchain\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "docs = retriever.get_relevant_documents('how does langchain work')\n",
+    "## Embed and Store\n",
     "\n",
-    "from ragdoll.helpers import pretty_print_docs\n",
-    "print(\"-\" * 100)\n",
-    "print(f\"The retriever had found {len(docs)} relevant documents\")\n",
-    "print(\"-\" * 100, \"\\n\\n\")\n",
-    "print(pretty_print_docs(docs, for_llm=False, top_n=1))"
+    "Let’s start by initializing a simple vector store retriever and storing our docs (in chunks).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ragdoll.retriever import RagdollRetriever\n",
+    "\n",
+    "ragdoll = RagdollRetriever(config={'enable_logging':True})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic retrieval\n",
+    "\n",
+    "let's create a vector store from the split_docs and then query it using similarity search."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.docstore.document import Document\n",
+    "\n",
+    "split_docs = [\n",
+    "    Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})\n",
+    "]\n",
+    "db = ragdoll.get_db(split_docs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------------------------------------\n",
-      "The retriever had found 4 relevant documents\n",
-      "---------------------------------------------------------------------------------------------------- \n",
-      "\n",
-      "\n",
-      "Source: https://aws.amazon.com/what-is/langchain/\n",
-      "Title: What is LangChain? - LangChain Explained - AWS\n",
-      "Content: How does LangChain work?\n",
-      "With LangChain, developers can adapt a language model flexibly to specific business contexts by designating steps required to produce the desired outcome.\n",
-      "Chains\n",
-      "Chains are the fundamental principle that holds various AI components in LangChain to provide context-aware responses. A chain is a series of automated actions from the user's query to the model's output. For example, developers can use a chain for:\n",
-      "Links\n",
-      "Chains are made of links. Each action that developers string together to form a chained sequence is called a link. With links, developers can divide complex tasks into multiple, smaller tasks. Examples of links include:\n",
-      "In the LangChain framework, a link accepts input from the user and passes it to the LangChain libraries for processing. LangChain also allows link reordering to create different AI workflows.\n",
-      "Overview\n",
-      "To use LangChain, developers install the framework in Python with the following command:\n",
-      "pip install langchain\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "docs = pl_retriever.get_relevant_documents('how does langchain work')\n",
-    "print(\"-\" * 100)\n",
-    "print(f\"The retriever had found {len(docs)} relevant documents\")\n",
-    "print(\"-\" * 100, \"\\n\\n\")\n",
-    "print(pretty_print_docs(docs, for_llm=False, top_n=1))"
+    "db.similarity_search('tell me about langchain')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now utilise a langchain retriever based on our selected vector db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever = ragdoll.get_retriever() \n",
+    "# we can do this because the vector db has already been created\n",
+    "#if we havent run get_db yet, we can simply create the retriever with ragdoll.get_retriever(documents=split_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retriever.get_relevant_documents(\"what is langchain\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Distance-based vector database retrieval embeds (represents) queries in high-dimensional space and finds similar embedded documents based on “distance”. But, retrieval may produce different results with subtle changes in query wording or if the embeddings do not capture the semantics of the data well. Prompt engineering / tuning is sometimes done to manually address these problems, but can be tedious.\n",
+    "\n",
+    "The MultiQueryRetriever automates the process of prompt tuning by using an LLM to generate multiple queries from different perspectives for a given user input query. For each query, it retrieves a set of relevant documents and takes the unique union across all queries to get a larger set of potentially relevant documents. By generating multiple perspectives on the same question, the MultiQueryRetriever might be able to overcome some of the limitations of the distance-based retrieval and get a richer set of results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
