--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ragdoll.config.Config object at 0x00000186FDE80090>\n",
+      "<ragdoll.config.Config object at 0x0000024589C8CB90>\n",
       "Running in a Jupyter Notebook or JupyterLab environment.\n"
      ]
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retrieval"
+    "# Retrieval\n",
+    "\n",
+    "The retrieval class handles the following activities:\n",
+    "\n",
+    "\n",
+    "<img src='img/retrieve_augment_prompt.png' height='500'/>"
    ]
   },
   {
@@ -290,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,48 +315,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.docstore.document import Document\n",
+    "#uncomment this code if you want to test with a local doc.\n",
     "\n",
-    "split_docs = [\n",
-    "    Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})\n",
-    "]\n",
+    "# from langchain.docstore.document import Document\n",
+    "\n",
+    "# split_docs = [\n",
+    "#     Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})\n",
+    "# ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db = ragdoll.get_db(split_docs)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})]"
+       "'Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\\nTitle: What is LangChain? Use Cases and Benefits - MarkTechPost\\nContent: What is LangChain? Use Cases and Benefits\\nLangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\\n1. Context-Awareness: LangChain enables applications to be context-aware by '"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.similarity_search('tell me about langchain')"
+    "from ragdoll.helpers import pretty_print_docs\n",
+    "\n",
+    "simdocs = db.similarity_search('tell me about langchain')\n",
+    "pretty_print_docs(simdocs, for_llm=False)[:500]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now utilise a langchain retriever based on our selected vector db"
+    "Let's now utilise a langchain retriever based on our selected vector db. A langchain retriever is an interface that returns documents given an unstructured query. It is more general than a vector store. A retriever does not need to be able to store documents, only to return (or retrieve) them. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,30 +380,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})]"
+       "'Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\\nTitle: What is LangChain? Use Cases and Benefits - MarkTechPost\\nContent: What is LangChain? Use Cases and Benefits\\nLangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\\n1. Context-Awareness: LangChain enables applications to be context-aware by '"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "retriever.get_relevant_documents(\"what is langchain\")"
+    "simdocs = retriever.get_relevant_documents(\"what is langchain\")\n",
+    "pretty_print_docs(simdocs, for_llm=False)[:500]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
