updated readme and example

--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -339,25 +339,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\\nTitle: What is LangChain? Use Cases and Benefits - MarkTechPost\\nContent: What is LangChain? Use Cases and Benefits\\nLangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\\n1. Context-Awareness: LangChain enables applications to be context-aware by '"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "The similarity store returned 4 relevant documents\n",
+      "---------------------------------------------------------------------------------------------------- \n",
+      "\n",
+      "\n",
+      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
+      "Content: What is LangChain? Use Cases and Benefits\n",
+      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
+      "1. Context-Awareness: LangChain enables applications to be context-aware by \n"
+     ]
     }
    ],
    "source": [
     "from ragdoll.helpers import pretty_print_docs\n",
     "\n",
     "simdocs = db.similarity_search('tell me about langchain')\n",
-    "pretty_print_docs(simdocs, for_llm=False)[:500]"
+    "\n",
+    "print(\"-\" * 100)\n",
+    "print(f\"The similarity store returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
+    "print(\"-\" * 100, \"\\n\\n\")\n",
+    "print(pretty_print_docs(simdocs, for_llm=False)[:500])"
    ]
   },
   {
@@ -380,23 +390,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\\nTitle: What is LangChain? Use Cases and Benefits - MarkTechPost\\nContent: What is LangChain? Use Cases and Benefits\\nLangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\\n1. Context-Awareness: LangChain enables applications to be context-aware by '"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "The retriever returned 4 relevant documents. below is a snippet:\n",
+      "---------------------------------------------------------------------------------------------------- \n",
+      "\n",
+      "\n",
+      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
+      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
+      "Content: What is LangChain? Use Cases and Benefits\n",
+      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
+      "1. Context-Awareness: LangChain enables applications to be context-aware by \n"
+     ]
     }
    ],
    "source": [
     "simdocs = retriever.get_relevant_documents(\"what is langchain\")\n",
-    "pretty_print_docs(simdocs, for_llm=False)[:500]"
+    "print(\"-\" * 100)\n",
+    "print(f\"The retriever returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
+    "print(\"-\" * 100, \"\\n\\n\")\n",
+    "print(pretty_print_docs(simdocs, for_llm=False)[:500])"
    ]
   },
   {
