updated readme to include multi query

--- a/ragdoll_example.ipynb
+++ b/ragdoll_example.ipynb
@@ -13,20 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)"
@@ -34,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<ragdoll.config.Config object at 0x0000024589C8CB90>\n",
-      "Running in a Jupyter Notebook or JupyterLab environment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ragdoll.helpers import is_notebook\n",
     "from ragdoll.index import RagdollIndex\n",
@@ -81,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['langchain features and benefits', 'langchain reviews and testimonials']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "search_queries = index.get_suggested_search_terms(question)\n",
     "search_queries"
@@ -139,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,23 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  * https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
-      "  * https://lakefs.io/blog/what-is-langchain-ml-architecture/\n",
-      "  * https://logankilpatrick.medium.com/what-is-langchain-and-why-should-i-care-as-a-developer-b2d952c42b28\n",
-      "  * https://news.ycombinator.com/item?id=36645575\n",
-      "  * https://www.reddit.com/r/aipromptprogramming/comments/13f8gjr/review_langchain_vs_huggingfaces_new_agent_system/\n",
-      "  * https://github.com/hwchase17/langchain/issues/4772\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "urllist = f\"\".join(f\"\\n  * {d['href']}\" for i, d in enumerate(results))\n",
     "print(urllist)"
@@ -173,24 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------------------------------------\n",
-      "extracted 6 sites\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/ \n",
-      "\n",
-      " What is LangChain? Use Cases and Benefits\n",
-      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
-      "1. Context-Awareness: LangChain enables applications to be context-aware by establishing connections between a language model and various context sources. These sources may include prompt instructions, few-shot examples, or other content t\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "documents = index.get_scraped_content()\n",
     "print(\"-\" * 100)\n",
@@ -221,19 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------------------------------------\n",
-      "extracted 97 documents from 6 documents\n",
-      "----------------------------------------------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "split_docs = index.get_split_documents(documents)\n",
     "print(\"-\" * 100)\n",
@@ -252,19 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------------------------------------------\n",
-      "extracted 97 documents from 6 documents\n",
-      "----------------------------------------------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "split_docs = index.run_index_pipeline(question)\n",
     "print(\"-\" * 100)\n",
@@ -295,13 +215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)\n",
+    "\n",
     "from ragdoll.retriever import RagdollRetriever\n",
     "\n",
-    "ragdoll = RagdollRetriever(config={'enable_logging':True})"
+    "ragdoll = RagdollRetriever(config={'enable_logging':True})\n",
+    "ragdoll.cfg.enable_logging"
    ]
   },
   {
@@ -315,31 +250,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#uncomment this code if you want to test with a local doc.\n",
     "\n",
-    "# from langchain.docstore.document import Document\n",
+    "from langchain.docstore.document import Document\n",
     "\n",
-    "# split_docs = [\n",
-    "#     Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})\n",
-    "# ]"
+    "split_docs = [\n",
+    "    Document(page_content=\"LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\", metadata={'source': 'wikipedia'})\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = ragdoll.get_db(split_docs)\n"
+    "db = ragdoll.get_db(split_docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -347,15 +282,14 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "The similarity store returned 4 relevant documents\n",
+      "The similarity store returned 1 relevant documents. below is a snippet:\n",
       "---------------------------------------------------------------------------------------------------- \n",
       "\n",
       "\n",
-      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
-      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
-      "Content: What is LangChain? Use Cases and Benefits\n",
-      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
-      "1. Context-Awareness: LangChain enables applications to be context-aware by \n"
+      "Source: wikipedia\n",
+      "Title: None\n",
+      "Content: LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\n",
+      "\n"
      ]
     }
    ],
@@ -379,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -398,15 +332,14 @@
      "output_type": "stream",
      "text": [
       "----------------------------------------------------------------------------------------------------\n",
-      "The retriever returned 4 relevant documents. below is a snippet:\n",
+      "The retriever returned 1 relevant documents. below is a snippet:\n",
       "---------------------------------------------------------------------------------------------------- \n",
       "\n",
       "\n",
-      "Source: https://www.marktechpost.com/2023/12/14/what-is-langchain-use-cases-and-benefits/\n",
-      "Title: What is LangChain? Use Cases and Benefits - MarkTechPost\n",
-      "Content: What is LangChain? Use Cases and Benefits\n",
-      "LangChain is an artificial intelligence framework designed for programmers to develop applications using large language models. It allows you to facilitate the creation of applications that consist of two key features:\n",
-      "1. Context-Awareness: LangChain enables applications to be context-aware by \n"
+      "Source: wikipedia\n",
+      "Title: None\n",
+      "Content: LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\n",
+      "\n"
      ]
     }
    ],
@@ -422,10 +355,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Distance-based vector database retrieval embeds (represents) queries in high-dimensional space and finds similar embedded documents based on “distance”. But, retrieval may produce different results with subtle changes in query wording or if the embeddings do not capture the semantics of the data well. Prompt engineering / tuning is sometimes done to manually address these problems, but can be tedious.\n",
-    "\n",
-    "The MultiQueryRetriever automates the process of prompt tuning by using an LLM to generate multiple queries from different perspectives for a given user input query. For each query, it retrieves a set of relevant documents and takes the unique union across all queries to get a larger set of potentially relevant documents. By generating multiple perspectives on the same question, the MultiQueryRetriever might be able to overcome some of the limitations of the distance-based retrieval and get a richer set of results."
+    "### Multiquery retrieval"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Distance-based vector database retrieval embeds (represents) queries in high-dimensional space and finds similar embedded documents based on “distance”. But, retrieval may produce different results with subtle changes in query wording or if the embeddings do not capture the semantics of the data well. With multiple queries, we are more likely get more results back from the database. The aim of multi-query is to have an expanded results sets which might be able to answer questions better than docs from a single query. These results will be deduplicated (in case the same document comes back multiple times) and then used as context in your final prompt. The MultiQueryRetriever class takes care of this, and can be selected by setting the `base_retriever` key in the config dictionary to `MULTI_QUERY`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ragdoll.cfg.base_retriever='MULTI_QUERY'\n",
+    "retriever = ragdoll.get_retriever() \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "The retriever returned 1 relevant documents. below is a snippet:\n",
+      "---------------------------------------------------------------------------------------------------- \n",
+      "\n",
+      "\n",
+      "Source: wikipedia\n",
+      "Title: None\n",
+      "Content: LangChain is a framework designed to simplify the creation of applications using large language models. As a language model integration framework, LangChain's use-cases largely overlap with those of language models in general, including document analysis and summarization, chatbots, and code analysis.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "simdocs = retriever.get_relevant_documents(\"what is langchain\")\n",
+    "print(\"-\" * 100)\n",
+    "print(f\"The retriever returned {len(simdocs)} relevant documents. below is a snippet:\")\n",
+    "print(\"-\" * 100, \"\\n\\n\")\n",
+    "print(pretty_print_docs(simdocs, for_llm=False)[:500])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
